--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "crud",
   "version": "0.1.0",
+  "homepage": "https://triandeni.github.io/ToDoList",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -15,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "pradeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
