--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crud",
   "version": "0.1.0",
-  "homepage": "https://triandeni.github.io/ToDoList",
+  "homepage": "https://triandeni.github.io/ToDoList/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
